--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"></script>
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
@@ -50,25 +52,45 @@
         </div>
 
         <div class="flex items-center gap-6">
-            <!-- Template Selector -->
-            <div class="flex items-center gap-2">
-                <label for="template-select" class="text-sm font-medium text-gray-600">Template:</label>
+            <!-- Toolbar -->
+            <div class="flex items-center gap-3">
+
+                <!-- Color Picker -->
+                <div class="relative group" title="Accent Color">
+                    <input type="color" id="color-picker" class="w-8 h-8 rounded cursor-pointer border-0 p-0"
+                        value="#4f46e5">
+                </div>
+
+                <!-- Template Selector -->
                 <select id="template-select"
-                    class="bg-gray-50 border border-gray-300 text-gray-700 text-sm rounded-lg focus:ring-primary focus:border-primary block p-2 outline-none">
-                    <option value="professional">Professional (Default)</option>
-                    <option value="modern">Modern (Dark Side)</option>
-                    <option value="minimalist">Minimalist (Clean)</option>
+                    class="bg-gray-50 border border-gray-300 text-gray-700 text-sm rounded-md focus:ring-primary focus:border-primary block p-2 outline-none">
+                    <option value="professional">Professional</option>
+                    <option value="modern">Modern</option>
+                    <option value="minimalist">Minimalist</option>
+                    <option value="creative">Creative</option>
+                    <option value="academic">Academic</option>
                 </select>
+
+                <!-- Data Actions -->
+                <div class="flex gap-2 border-l pl-3 border-gray-300">
+                    <button id="export-json" class="text-gray-600 hover:text-primary transition-colors"
+                        title="Export Backup">
+                        <i class="fa-solid fa-file-export"></i>
+                    </button>
+                    <button onclick="document.getElementById('import-json').click()"
+                        class="text-gray-600 hover:text-primary transition-colors" title="Import Backup">
+                        <i class="fa-solid fa-file-import"></i>
+                    </button>
+                    <input type="file" id="import-json" class="hidden" accept=".json">
+                </div>
+
+                <div class="w-px h-6 bg-gray-300 mx-1"></div>
+
+                <button id="download-pdf"
+                    class="bg-primary hover:bg-indigo-700 text-white px-5 py-2 rounded-md font-medium transition-all shadow-lg shadow-indigo-500/30 flex items-center gap-2 transform hover:-translate-y-0.5">
+                    <i class="fa-solid fa-download"></i> PDF
+                </button>
             </div>
-
-            <button id="download-pdf"
-                class="bg-primary hover:bg-indigo-700 text-white px-5 py-2 rounded-md font-medium transition-all shadow-lg shadow-indigo-500/30 flex items-center gap-2 transform hover:-translate-y-0.5">
-                <i class="fa-solid fa-download"></i> Download PDF
-            </button>
-
-            <button id="open-settings" class="text-gray-500 hover:text-gray-700 transition-colors">
-                <i class="fa-solid fa-gear text-xl"></i>
-            </button>
         </div>
     </header>
 
@@ -293,32 +315,6 @@
                 <button id="ai-run-btn"
                     class="w-full bg-gradient-to-r from-indigo-500 to-purple-600 hover:from-indigo-600 hover:to-purple-700 text-white py-2.5 rounded-lg font-bold shadow-md transition-all flex justify-center items-center gap-2">
                     <span>Generate Content</span>
-                </button>
-            </div>
-        </div>
-    </div>
-
-    <!-- SETTINGS MODAL -->
-    <div id="settings-modal"
-        class="fixed inset-0 z-50 hidden flex items-center justify-center bg-black/50 backdrop-blur-sm">
-        <div class="bg-white rounded-xl shadow-2xl w-full max-w-md overflow-hidden">
-            <div class="bg-gray-100 border-b border-gray-200 p-4 flex justify-between items-center">
-                <h3 class="font-bold text-gray-800 text-lg"><i class="fa-solid fa-gear mr-2"></i>Settings</h3>
-                <button class="text-gray-500 hover:text-gray-800" onclick="closeModal('settings-modal')"><i
-                        class="fa-solid fa-xmark"></i></button>
-            </div>
-            <div class="p-6 space-y-4">
-                <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-1">OpenAI API Key</label>
-                    <input type="password" id="api-key-input"
-                        class="w-full border border-gray-300 rounded-md p-2 text-sm outline-none focus:border-indigo-500"
-                        placeholder="sk-...">
-                    <p class="text-xs text-gray-400 mt-1">Leave empty to use the built-in Smart Template engine (Free).
-                    </p>
-                </div>
-                <button id="save-settings"
-                    class="w-full bg-gray-800 hover:bg-black text-white py-2 rounded-lg font-bold transition-colors">
-                    Save Configuration
                 </button>
             </div>
         </div>
