--- a/index.html
+++ b/index.html
@@ -48,18 +48,19 @@
 
     <!-- Navbar / Toolbar -->
     <header
-        class="glass-nav border-b border-gray-200/60 h-16 flex items-center justify-between px-6 z-20 shrink-0 nav-animate">
-        <div class="flex items-center gap-3">
+        class="glass-nav border-b border-gray-200/60 h-14 md:h-16 flex items-center justify-between px-3 md:px-6 z-20 shrink-0 nav-animate">
+        <div class="flex items-center gap-2 md:gap-3">
             <div
-                class="nav-logo-spin w-9 h-9 bg-gradient-to-br from-indigo-500 to-purple-600 rounded-xl flex items-center justify-center text-white font-bold text-lg shadow-lg shadow-primary/30 hover:shadow-xl hover:shadow-primary/40 transition-all hover:scale-110 cursor-pointer"
+                class="nav-logo-spin w-8 h-8 md:w-9 md:h-9 bg-gradient-to-br from-indigo-500 to-purple-600 rounded-xl flex items-center justify-center text-white font-bold text-lg shadow-lg shadow-primary/30 hover:shadow-xl hover:shadow-primary/40 transition-all hover:scale-110 cursor-pointer"
                 style="animation: logoEntrance 0.8s cubic-bezier(0.34, 1.56, 0.64, 1) 0.3s both, float 3s ease-in-out 1.1s infinite;">
-                <i class="fa-solid fa-file-lines text-sm"></i>
+                <i class="fa-solid fa-file-lines text-xs md:text-sm"></i>
             </div>
-            <h1 class="nav-title-slide text-xl font-bold text-gray-800 tracking-tight">Resume<span class="text-primary">Builder</span>
+            <h1 class="nav-title-slide text-base md:text-xl font-bold text-gray-800 tracking-tight">Resume<span class="text-primary">Builder</span>
             </h1>
         </div>
 
-        <div class="flex items-center gap-5 nav-tools-fade">
+        <!-- Desktop toolbar -->
+        <div class="hidden md:flex items-center gap-5 nav-tools-fade">
             <!-- Progress indicator -->
             <div class="hidden sm:flex items-center gap-2 text-xs text-gray-500" id="completion-indicator">
                 <span id="completion-text">0% complete</span>
@@ -114,16 +115,90 @@
                 </button>
             </div>
         </div>
+
+        <!-- Mobile toolbar (compact) -->
+        <div class="flex md:hidden items-center gap-2">
+            <button class="theme-toggle" id="theme-toggle-mobile" title="Toggle Dark Mode">
+                <span class="theme-toggle-knob"><i class="fa-solid fa-sun text-amber-500"></i></span>
+            </button>
+            <button id="download-pdf-mobile"
+                class="btn-primary bg-gradient-to-r from-indigo-500 to-purple-600 text-white px-3 py-2 rounded-lg font-semibold transition-all shadow-md flex items-center gap-1.5 text-xs">
+                <i class="fa-solid fa-download"></i> PDF
+            </button>
+            <button id="mobile-menu-btn"
+                class="toolbar-btn w-9 h-9 flex items-center justify-center text-gray-500 hover:text-primary hover:bg-gray-100 rounded-lg transition-all">
+                <i class="fa-solid fa-ellipsis-vertical"></i>
+            </button>
+        </div>
     </header>
 
-    <!-- Main Content (Split View) -->
-    <main class="flex-1 flex overflow-hidden">
+    <!-- Mobile Menu Drawer -->
+    <div id="mobile-menu" class="mobile-menu-overlay hidden">
+        <div class="mobile-menu-drawer">
+            <div class="flex items-center justify-between px-4 py-3 border-b border-gray-100">
+                <h3 class="font-bold text-gray-800 text-sm">Settings</h3>
+                <button onclick="document.getElementById('mobile-menu').classList.add('hidden')" class="w-8 h-8 flex items-center justify-center rounded-lg hover:bg-gray-100 text-gray-400">
+                    <i class="fa-solid fa-xmark"></i>
+                </button>
+            </div>
+            <div class="p-4 space-y-4">
+                <div>
+                    <label class="block text-xs font-semibold text-gray-500 uppercase tracking-wider mb-1.5">Template</label>
+                    <select id="template-select-mobile"
+                        class="input-interactive w-full bg-white rounded-xl p-2.5 text-sm outline-none">
+                        <option value="professional">Professional</option>
+                        <option value="modern">Modern</option>
+                        <option value="minimalist">Minimalist</option>
+                        <option value="creative">Creative</option>
+                        <option value="academic">Academic</option>
+                    </select>
+                </div>
+                <div class="flex items-center justify-between">
+                    <label class="text-xs font-semibold text-gray-500 uppercase tracking-wider">Accent Color</label>
+                    <div class="color-picker-wrapper" title="Accent Color">
+                        <input type="color" id="color-picker-mobile" value="#4f46e5">
+                    </div>
+                </div>
+                <div class="flex items-center gap-2">
+                    <label class="text-xs font-semibold text-gray-500 uppercase tracking-wider flex-1">Progress</label>
+                    <span id="completion-text-mobile" class="text-xs text-gray-500">0%</span>
+                    <div class="progress-bar-container w-20">
+                        <div class="progress-bar-fill" id="progress-bar-mobile" style="width: 0%"></div>
+                    </div>
+                </div>
+                <div class="flex gap-2">
+                    <button id="export-json-mobile" class="flex-1 flex items-center justify-center gap-2 py-2.5 rounded-xl bg-gray-100 hover:bg-gray-200 text-gray-600 text-xs font-semibold transition-all">
+                        <i class="fa-solid fa-file-export"></i> Export Backup
+                    </button>
+                    <button onclick="document.getElementById('import-json-mobile').click()" class="flex-1 flex items-center justify-center gap-2 py-2.5 rounded-xl bg-gray-100 hover:bg-gray-200 text-gray-600 text-xs font-semibold transition-all">
+                        <i class="fa-solid fa-file-import"></i> Import
+                    </button>
+                    <input type="file" id="import-json-mobile" class="hidden" accept=".json">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Mobile Tab Switcher -->
+    <div class="mobile-tab-bar md:hidden">
+        <button class="mobile-tab active" data-tab="editor" id="tab-editor">
+            <i class="fa-solid fa-pen-to-square"></i>
+            <span>Editor</span>
+        </button>
+        <button class="mobile-tab" data-tab="preview" id="tab-preview">
+            <i class="fa-solid fa-eye"></i>
+            <span>Preview</span>
+        </button>
+    </div>
+
+    <!-- Main Content (Split View / Tab View on Mobile) -->
+    <main class="flex-1 flex flex-col md:flex-row overflow-hidden">
 
         <!-- LEFT: Editor Panel -->
         <aside
-            class="w-1/2 md:w-5/12 bg-gray-50/80 overflow-y-auto p-6 custom-scrollbar relative z-10"
+            class="mobile-panel-active w-full md:w-1/2 lg:w-5/12 bg-gray-50/80 overflow-y-auto p-4 md:p-6 custom-scrollbar relative z-10"
             id="editor-panel">
-            <div class="max-w-2xl mx-auto space-y-5 stagger-children">
+            <div class="max-w-2xl mx-auto space-y-4 md:space-y-5 stagger-children">
 
                 <!-- Personal Info -->
                 <section class="editor-section animate-fade-in-up">
@@ -245,17 +320,17 @@
             </div>
         </aside>
 
-        <!-- Resizer -->
-        <div class="panel-resizer" id="panel-resizer"></div>
+        <!-- Resizer (desktop only) -->
+        <div class="panel-resizer hidden md:block" id="panel-resizer"></div>
 
         <!-- RIGHT: Preview Panel -->
-        <section class="flex-1 flex justify-center py-8 overflow-y-auto custom-scrollbar relative"
+        <section class="hidden md:flex flex-1 justify-center py-4 md:py-8 overflow-y-auto custom-scrollbar relative"
             id="preview-section">
             <!-- Grid dot pattern -->
             <div class="grid-dots"></div>
 
             <div id="resume-preview"
-                class="bg-white w-[210mm] min-h-[297mm] shadow-2xl p-[15mm] flex flex-col text-gray-800 relative"
+                class="bg-white w-full max-w-[210mm] min-h-[297mm] shadow-2xl p-[8mm] md:p-[15mm] flex flex-col text-gray-800 relative"
                 style="transform-origin: top center;">
                 <!-- Resume content rendered by JS -->
             </div>
@@ -278,8 +353,8 @@
     </main>
 
     <!-- AI WRITER MODAL -->
-    <div id="ai-modal" class="fixed inset-0 z-50 hidden flex items-center justify-center bg-black/40 backdrop-blur-md">
-        <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md overflow-hidden transform transition-all animate-fade-in-scale">
+    <div id="ai-modal" class="fixed inset-0 z-50 hidden flex items-center justify-center bg-black/40 backdrop-blur-md p-4">
+        <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md overflow-hidden transform transition-all animate-fade-in-scale max-h-[90vh] overflow-y-auto">
             <div class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 p-5 flex justify-between items-center relative overflow-hidden">
                 <div class="absolute inset-0 opacity-20">
                     <div class="absolute top-0 right-0 w-32 h-32 bg-white rounded-full translate-x-1/2 -translate-y-1/2"></div>
