--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
 
                 <!-- Data Actions -->
                 <div class="flex gap-1 border-l pl-3 border-gray-200">
+                    <button onclick="openApiKeyModal()" class="toolbar-btn zoom-btn !w-9 !h-9 !text-gray-500 hover:!text-amber-500 hover:!bg-amber-50 !rounded-lg transition-all" title="API Key Settings">
+                        <i class="fa-solid fa-key"></i>
+                    </button>
                     <button id="export-json" class="toolbar-btn zoom-btn !w-9 !h-9 !text-gray-500 hover:!text-primary hover:!bg-gray-100 !rounded-lg transition-all"
                         title="Export Backup">
                         <i class="fa-solid fa-file-export"></i>
@@ -165,6 +168,11 @@
                     <div class="progress-bar-container w-20">
                         <div class="progress-bar-fill" id="progress-bar-mobile" style="width: 0%"></div>
                     </div>
+                </div>
+                <div class="flex gap-2">
+                    <button onclick="openApiKeyModal(); document.getElementById('mobile-menu').classList.add('hidden')" class="flex-1 flex items-center justify-center gap-2 py-2.5 rounded-xl bg-amber-50 hover:bg-amber-100 text-amber-600 text-xs font-semibold transition-all">
+                        <i class="fa-solid fa-key"></i> API Key
+                    </button>
                 </div>
                 <div class="flex gap-2">
                     <button id="export-json-mobile" class="flex-1 flex items-center justify-center gap-2 py-2.5 rounded-xl bg-gray-100 hover:bg-gray-200 text-gray-600 text-xs font-semibold transition-all">
@@ -399,7 +407,49 @@
         </div>
     </div>
 
-    <script src="crypto-utils.js"></script>
+    <!-- API KEY SETTINGS MODAL -->
+    <div id="api-key-modal" class="fixed inset-0 z-50 hidden flex items-center justify-center bg-black/40 backdrop-blur-md p-4">
+        <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md overflow-hidden transform transition-all animate-fade-in-scale">
+            <div class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 p-5 flex justify-between items-center relative overflow-hidden">
+                <div class="absolute inset-0 opacity-20">
+                    <div class="absolute top-0 right-0 w-32 h-32 bg-white rounded-full translate-x-1/2 -translate-y-1/2"></div>
+                    <div class="absolute bottom-0 left-0 w-24 h-24 bg-white rounded-full -translate-x-1/3 translate-y-1/3"></div>
+                </div>
+                <h3 class="text-white font-bold text-lg flex items-center gap-2 relative z-10">
+                    <span class="w-8 h-8 bg-white/20 rounded-lg flex items-center justify-center"><i class="fa-solid fa-key"></i></span>
+                    API Key Settings
+                </h3>
+                <button class="text-white/80 hover:text-white relative z-10 w-8 h-8 hover:bg-white/20 rounded-lg flex items-center justify-center transition-all" onclick="closeModal('api-key-modal')">
+                    <i class="fa-solid fa-xmark text-lg"></i>
+                </button>
+            </div>
+            <div class="p-6 space-y-5">
+                <div>
+                    <label class="block text-xs font-semibold text-gray-500 uppercase tracking-wider mb-1.5">OpenRouter API Key</label>
+                    <div class="relative">
+                        <input type="password" id="api-key-input"
+                            class="input-interactive w-full bg-white rounded-xl p-2.5 pr-10 text-sm outline-none font-mono"
+                            placeholder="sk-or-v1-...">
+                        <button onclick="toggleApiKeyVisibility()" class="absolute right-2 top-1/2 -translate-y-1/2 text-gray-400 hover:text-gray-600 p-1">
+                            <i id="api-key-eye" class="fa-solid fa-eye text-sm"></i>
+                        </button>
+                    </div>
+                    <p class="text-xs text-gray-400 mt-1.5">Your key is stored locally in your browser and never sent to any server except OpenRouter.</p>
+                </div>
+                <div class="bg-gradient-to-r from-indigo-50 to-purple-50 p-4 rounded-xl text-xs text-indigo-700 flex items-start gap-2.5 border border-indigo-100">
+                    <i class="fa-solid fa-shield-halved mt-0.5 text-indigo-500"></i>
+                    <p>Get your free API key at <a href="https://openrouter.ai/keys" target="_blank" class="underline font-semibold">openrouter.ai/keys</a>. Your key stays in localStorage and is never committed to code.</p>
+                </div>
+                <button onclick="saveApiKey()"
+                    class="btn-primary w-full bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white py-3 rounded-xl font-bold shadow-lg transition-all flex justify-center items-center gap-2 text-sm">
+                    <i class="fa-solid fa-check"></i>
+                    <span>Save Key</span>
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <script src="config.js"></script>
     <script src="script.js"></script>
 </body>
 
