Add API security: origin validation, secret token auth, rate limiting, input validation

--- a/index.html
+++ b/index.html
@@ -410,6 +410,8 @@
 
     </div>
 
+    <!-- API Token: set this to match your Vercel API_SECRET env var -->
+    <script>window.__API_TOKEN = "";</script>
     <script src="script.js"></script>
 </body>
 
