--- a/index.html
+++ b/index.html
@@ -235,35 +235,54 @@
                     <div class="section-body mt-5">
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                             <div>
-                                <label class="block text-xs font-semibold text-gray-500 uppercase tracking-wider mb-1.5">Full Name</label>
-                                <input type="text" data-field="name"
-                                    class="input-interactive w-full bg-white rounded-xl px-3.5 py-2.5 text-sm outline-none"
-                                    placeholder="John Doe">
+                                <label class="block text-xs font-semibold text-gray-500 uppercase tracking-wider mb-1.5">
+                                    <i class="fa-solid fa-user-pen text-primary/50 mr-1"></i> Full Name
+                                </label>
+                                <div class="relative">
+                                    <i class="fa-solid fa-id-badge absolute left-3 top-1/2 -translate-y-1/2 text-gray-300 text-xs"></i>
+                                    <input type="text" data-field="name"
+                                        class="input-interactive w-full bg-white rounded-xl pl-8 pr-3.5 py-2.5 text-sm outline-none"
+                                        placeholder="e.g. Abu Saleem">
+                                </div>
                             </div>
                             <div>
-                                <label class="block text-xs font-semibold text-gray-500 uppercase tracking-wider mb-1.5">Job Title</label>
-                                <input type="text" data-field="title"
-                                    class="input-interactive w-full bg-white rounded-xl px-3.5 py-2.5 text-sm outline-none"
-                                    placeholder="Software Engineer">
+                                <label class="block text-xs font-semibold text-gray-500 uppercase tracking-wider mb-1.5">
+                                    <i class="fa-solid fa-briefcase text-primary/50 mr-1"></i> Job Title
+                                </label>
+                                <div class="relative">
+                                    <i class="fa-solid fa-tag absolute left-3 top-1/2 -translate-y-1/2 text-gray-300 text-xs"></i>
+                                    <input type="text" data-field="title"
+                                        class="input-interactive w-full bg-white rounded-xl pl-8 pr-3.5 py-2.5 text-sm outline-none"
+                                        placeholder="e.g. Full Stack Developer">
+                                </div>
                             </div>
                         </div>
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-4">
                             <div>
-                                <label class="block text-xs font-semibold text-gray-500 uppercase tracking-wider mb-1.5">Email</label>
-                                <input type="email" data-field="email"
-                                    class="input-interactive w-full bg-white rounded-xl px-3.5 py-2.5 text-sm outline-none"
-                                    placeholder="john@example.com">
+                                <label class="block text-xs font-semibold text-gray-500 uppercase tracking-wider mb-1.5">
+                                    <i class="fa-solid fa-envelope text-primary/50 mr-1"></i> Email
+                                </label>
+                                <div class="relative">
+                                    <i class="fa-solid fa-at absolute left-3 top-1/2 -translate-y-1/2 text-gray-300 text-xs"></i>
+                                    <input type="email" data-field="email"
+                                        class="input-interactive w-full bg-white rounded-xl pl-8 pr-3.5 py-2.5 text-sm outline-none"
+                                        placeholder="e.g. abu@devstudio.io">
+                                </div>
                             </div>
                             <div>
-                                <label class="block text-xs font-semibold text-gray-500 uppercase tracking-wider mb-1.5">Phone</label>
-                                <input type="text" data-field="phone"
-                                    class="input-interactive w-full bg-white rounded-xl px-3.5 py-2.5 text-sm outline-none"
-                                    placeholder="+1 234 567 890">
+                                <label class="block text-xs font-semibold text-gray-500 uppercase tracking-wider mb-1.5">
+                                    <i class="fa-solid fa-phone text-primary/50 mr-1"></i> Phone
+                                </label>
+                                <div class="relative">
+                                    <i class="fa-solid fa-mobile-screen absolute left-3 top-1/2 -translate-y-1/2 text-gray-300 text-xs"></i>
+                                    <input type="text" data-field="phone"
+                                        class="input-interactive w-full bg-white rounded-xl pl-8 pr-3.5 py-2.5 text-sm outline-none"
+                                        placeholder="e.g. +1 (555) 987-6543">
+                                </div>
                             </div>
                         </div>
                         <div class="mt-4">
-                            <label class="block text-xs font-semibold text-gray-500 uppercase tracking-wider mb-1.5 flex items-center justify-between">
-                                Summary
+                            <label class=\"block text-xs font-semibold text-gray-500 uppercase tracking-wider mb-1.5 flex items-center justify-between\">\n                                <span><i class=\"fa-solid fa-feather text-primary/50 mr-1\"></i> Summary</span>
                                 <button
                                     class="ai-btn-glow text-xs text-white bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 px-3.5 py-1.5 rounded-full font-semibold flex items-center gap-1.5 shadow-md transition-all transform hover:scale-105 ai-generate-btn normal-case tracking-normal"
                                     data-target="summary" data-togglenode="ai-modal">
@@ -272,7 +291,7 @@
                             </label>
                             <textarea data-field="summary"
                                 class="input-interactive w-full bg-white rounded-xl px-3.5 py-2.5 h-24 text-sm outline-none resize-none"
-                                placeholder="Brief summary of your professional background..."></textarea>
+                                placeholder="e.g. Creative Full Stack Developer with 4+ years building high-performance web apps..."></textarea>
                         </div>
                     </div>
                 </section>
@@ -340,9 +359,9 @@
                             <!-- Tags go here -->
                             <input type="text" id="skills-input"
                                 class="bg-transparent border-none outline-none flex-1 min-w-[100px] text-sm py-1"
-                                placeholder="Type & press Enter...">
+                                placeholder="e.g. React, Python, AWS... (press Enter)">
                         </div>
-                        <p class="text-xs text-gray-400 mt-2 flex items-center gap-1"><i class="fa-solid fa-keyboard text-gray-300"></i> Press Enter to add a skill.</p>
+                        <p class="text-xs text-gray-400 mt-2 flex items-center gap-1.5"><i class="fa-solid fa-keyboard text-gray-300"></i> Type a skill and press <span class="kbd-hint">Enter</span> to add it</p>
                     </div>
                 </section>
 
@@ -411,7 +430,7 @@
                     <label class="block text-xs font-semibold text-gray-500 uppercase tracking-wider mb-1.5">Keywords / Key Achievements</label>
                     <input type="text" id="ai-keywords"
                         class="input-interactive w-full bg-white rounded-xl p-2.5 text-sm outline-none"
-                        placeholder="e.g. Increased sales by 20%, Led team of 5...">
+                        placeholder="e.g. Scaled platform to 50K users, Reduced latency by 40%...">
                     <p class="text-xs text-gray-400 mt-1.5">Optional. The AI will weave these into the text.</p>
                 </div>
                 <div class="bg-gradient-to-r from-indigo-50 to-purple-50 p-4 rounded-xl text-xs text-indigo-700 flex items-start gap-2.5 border border-indigo-100">
